@@ -442,7 +442,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .darkblue .ui-dialog .ui-dialog-buttonpane button { margin: .5em .4em .5em 0; cursor: pointer; }
 .darkblue .ui-dialog .ui-resizable-se { width: 12px; height: 12px; right: -5px; bottom: -5px; background-position: 16px 16px; }
 .darkblue .ui-draggable .ui-dialog-titlebar { cursor: move; }
-.darkblue .ui-sortable-placeholder { border: 1px dotted #2f2f2f; }
+.darkblue .ui-sortable-placeholder { border: 1px dotted #77B7DA; }
 
 /*
  * jQuery UI Slider 1.8.9
