@@ -1,11 +1,13 @@
 Changes for 2.1.8
 
 New features:
+..F....... [ZBX-7097] changed dashboard drag'n'drop widget placeholder color in the dark orange and dark blue themes (Pavels)
 ........S. [ZBX-6294] fixed nodata() trigger firing immediately after no data maintenance (asaveljevs, Sasha)
 A.F....... [ZBX-1357] updated Dutch, Finnish, Indonesian, Italian, Lithuanian, Persian, Portuguese (Portugal), Russian and Slovak translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
 ....I..... [ZBX-5374] removed ONLY directive from PostgreSQL upgrade statements (Sasha)
+..F....... [ZBX-7097] fixed dashboard drag'n'drop widget placeholder not being displayed in the classic theme (Pavels)
 ....I..... [ZBX-7130] fixed makefiles to build zabbix_proxy only (Sasha)
 ..F....... [ZBX-7055] fixed displaing OK trigger status in maps (Eduard)
 ..F....... [ZBX-7081] fixed node drop down being displayed incorrectly in several pop ups (Pavels)
@@ -503,6 +505,7 @@ New features:
 A.F....... [ZBX-1357] updated German, Japanese, Italian, Romanian and Slovak translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+........S. [ZBX-7151] limited alert message and items parameter length to 2048 characters when working with Oracle and DB2 databases (wiper)
 ........S. [ZBX-7133] fixed processing of zabbix[host,*,available] item; fixed proxy's hosts availability data on server (Sasha)
 ..F....... [ZBX-7112] improved file import validation for graph items (Eduard)
 A......... [ZBX-7101] fixed generated SQL queries in action.get method when simultaneously selecting more than one condition and operation (Ivo)
